[project]
name = "atx-common"
version = "0.1.0"
description = "Shared utilities for AtlasXomics Latch Workflows"
authors = [
    { name = "James McGann", email = "jamesm@atlasxomics.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "latch",
]

[project.optional-dependencies]
analysis = [
    "anndata",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atx_common"]
